--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
   </properties>
   
   <build>
+  
+ <resources>
+  <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+  </resource>
+ </resources>
+  
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
 
