--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,12 @@
     <artifactId>selenium-java</artifactId>
     <version>4.2.2</version>
 </dependency>
-    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>7.4.0</version>
-    <scope>test</scope>
+    <version>7.5</version>
+    <scope>compile</scope>
 </dependency>
 <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 <dependency>
